fix: 350+ tags overflows issues

--- a/src/Components/pages/WorkOuts/WorkOuts.css
+++ b/src/Components/pages/WorkOuts/WorkOuts.css
@@ -4,7 +4,7 @@
 .img{
     position: absolute;
     top: 230px;
-    right: 300px;
+    right: 150px;
 }
 
 .toptag{
@@ -21,7 +21,7 @@
 .buttomtag{
     position: absolute;
     top: 580px;
-    left: 650px;
+    left: 790px;
    
 }
 
